<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/right_round_shape"
    android:orientation="vertical"
    android:alpha="0.7"
    tools:context=".TemperatureConverter">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad1"
        android:paddingLeft="@dimen/pad"
        android:paddingRight="@dimen/pad"
        android:text="@string/convert_this_value"
        android:textColor="@color/white"
        android:textSize="@dimen/txtSize" />

    <EditText
        android:id="@+id/enteredValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad"
        android:layout_marginBottom="@dimen/pad1"
        android:hint="@string/enter_value_to_convert"
        android:inputType="number"
        android:textColor="@color/dark" />

    <RadioGroup
        android:id="@+id/radioButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/celsiusToFahrenheit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pad1"
            android:text="@string/celsius_to_fahrenheit"
            android:textColor="@color/dark"
            android:textSize="@dimen/txtSize" />

        <RadioButton
            android:id="@+id/fahrenheitToCelsius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pad1"
            android:text="@string/fahrenheit_to_celsius"
            android:textSize="@dimen/txtSize" />
    </RadioGroup>

    <Button
        android:id="@+id/convertTemperature"
        style="@style/AppTheme.RoundedCornerMaterialButton1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:onClick="temperatureConversion"
        android:selectAllOnFocus="false"
        android:text="@string/convert"
        android:textColor="@color/dark"
        android:textSize="@dimen/txtSize"
        android:drawableLeft="@drawable/convert"
        android:drawableStart="@drawable/convert"/>

    <TextView
        android:id="@+id/displayTemperatureResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad1"
        android:hint="Result will show here"
        android:inputType="numberDecimal"
        android:paddingLeft="@dimen/pad"
        android:paddingRight="@dimen/pad"
        android:textColor="@color/dark"
        android:textSize="@dimen/txtSize" />

</LinearLayout>